# New_Progetto_laboratorio

./: Activities.cpp  Activities.h  CMakeLists.txt  Date.cpp  Date.h  Diary.cpp  Diary.h  ToDo.cpp  ToDo.h  farePizza.txt  main.cpp  readActivities.txt  riassuntoAttivita.txt
Test/: ActivitiesFixture.cpp  CMakeLists.txt  DateFixture.cpp  DiaryFixture.cpp  ToDoFixture.cpp
Test/lib/googletest/docs/: faq.md
Test/lib/googletest/docs/reference/: testing.md
Test/lib/googletest/googletest/include/gtest/: gtest.h
